<resources>
    <string name="app_name">Matbjorg-app</string>
    <string name="title_home">Heim</string>
    <string name="title_profile">Heimasvæði</string>
    <string name="title_menu">Valmynd</string>
    <string name="login">Innskráning</string>
    <string name="signup">Nýskráning</string>
    <string name="logout">Útskráning</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_name">Nafn</string>
    <string name="prompt_email">Netfang</string>
    <string name="prompt_password">Lykilorð</string>
    <string name="action_login">Innskráning</string>
    <string name="action_sign_in_short">Nýskráning</string>
    <string name="welcome">"Welcome !"</string>
    <string name="login_failed">"Ekki tókst að innskrá notanda"</string>
    <string name="get_all_ads">Skoða allar auglýsingar</string>
    <string name="get_categories">Flokkar</string>
    <string name="advertisments_title">Auglýsingar</string>
    <string name="button_add_to_cart">Bæta við körfu</string>
    <string name="basket_title">Karfa</string>
    <string name="sharedPref">"is.hi.hbv601g.matbjorg_app"</string>
    <string name="confirm_basket">Kaupa</string>
    <string name="delete">Eyða</string>
    <string name="change_amount">✓</string>
    <string name="amount">Magn:</string>
    <string name="search_hint">Leita af vöru</string>
    <string name="categories">Vöruflokkar</string>
    <string name="sellers">Söluaðilar</string>
    <string name="map_button_text">Kort</string>
    <string name="add_location">Bæta við staðsetningu</string>
    <string name="location">Staðsetning</string>
    <string name="comfirm_location">Staðfesta</string>
    <string name="review_text">Umsagnir</string>
    <string name="new_review">Ný umsögn</string>
    <string name="submit_review">Staðfesta umsögn</string>
    <string name="tag1">GRÆNMETI</string>
    <string name="tag2">MJÓLKURVARA</string>
    <string name="tag3">ÞURRVARA</string>
    <string name="tag4">BRAUÐ</string>
    <string name="tag5">BAKKELSI</string>
    <string name="tag6">ÁVEXTIR</string>
    <string name="tag7">DRYKKJARVARA</string>
    <string name="tag8">VEITINGASTAÐUR</string>
    <string name="tag9">SÆLGÆTI</string>
    <string name="tag10">HEILSUVARA</string>
    <string name="tag11">KJÖT</string>
    <string name="tag12">BAUNIR</string>
    <string name="tag13">VEGAN</string>
    <string name="tag14">GRÆNMETISFÆÐI</string>
</resources>