<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddAdvertisementActivity">

    <TextView
        android:id="@+id/text_settu_inn_upplysingar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="Settu inn upplýsingar um vöruna"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/textinput_heiti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:hint="Heiti"
        android:inputType="text"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_settu_inn_upplysingar"
        app:layout_constraintTop_toTopOf="@+id/text_settu_inn_upplysingar"/>

    <EditText
        android:id="@+id/textinput_lysing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:hint="Lýsing"
        android:inputType="textMultiLine"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textinput_heiti"
        app:layout_constraintTop_toTopOf="@+id/textinput_heiti"/>
    <EditText
        android:id="@+id/textinput_magn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:hint="Magn"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textinput_lysing"
        app:layout_constraintTop_toTopOf="@+id/textinput_lysing"/>

    <EditText
        android:id="@+id/textinput_verd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:hint="Verð"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textinput_magn"
        app:layout_constraintTop_toTopOf="@+id/textinput_magn"/>

    <EditText
        android:id="@+id/textinput_gildistimi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:hint="Gildir til 'YYYY-MM-DD HH:MM'"
        android:inputType="text"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textinput_verd"
        app:layout_constraintTop_toTopOf="@+id/textinput_verd"
        />

    <CheckBox android:id="@+id/checkbox_tag1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="12dp"
        android:text="@string/tag1"
        android:onClick="onCheckBoxClicked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textinput_gildistimi"/>

    <CheckBox android:id="@+id/checkbox_tag2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="12dp"
        android:text="@string/tag2"
        android:onClick="onCheckBoxClicked"
        app:layout_constraintStart_toEndOf="@+id/checkbox_tag1"
        app:layout_constraintTop_toTopOf="@+id/textinput_gildistimi"/>

    <CheckBox android:id="@+id/checkbox_tag3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="12dp"
        android:text="@string/tag3"
        android:onClick="onCheckBoxClicked"
        app:layout_constraintStart_toEndOf="@+id/checkbox_tag2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textinput_gildistimi"/>

    <CheckBox android:id="@+id/checkbox_tag4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="12dp"
        android:text="@string/tag4"
        android:onClick="onCheckBoxClicked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_tag1"/>

    <CheckBox android:id="@+id/checkbox_tag5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="12dp"
        android:text="@string/tag5"
        android:onClick="onCheckBoxClicked"
        app:layout_constraintStart_toEndOf="@id/checkbox_tag4"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_tag1"/>

    <CheckBox android:id="@+id/checkbox_tag6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="12dp"
        android:text="@string/tag5"
        android:onClick="onCheckBoxClicked"
        app:layout_constraintStart_toEndOf="@id/checkbox_tag5"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_tag1"/>

    <CheckBox android:id="@+id/checkbox_tag7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="12dp"
        android:text="@string/tag7"
        android:onClick="onCheckBoxClicked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_tag4"/>

    <CheckBox android:id="@+id/checkbox_tag8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="12dp"
        android:text="@string/tag5"
        android:onClick="onCheckBoxClicked"
        app:layout_constraintStart_toEndOf="@id/checkbox_tag7"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_tag4"/>

    <CheckBox android:id="@+id/checkbox_tag9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="12dp"
        android:text="@string/tag9"
        android:onClick="onCheckBoxClicked"
        app:layout_constraintStart_toEndOf="@id/checkbox_tag8"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_tag4"/>

    <CheckBox android:id="@+id/checkbox_tag10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="12dp"
        android:text="@string/tag7"
        android:onClick="onCheckBoxClicked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_tag7"/>

    <CheckBox android:id="@+id/checkbox_tag11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="12dp"
        android:text="@string/tag11"
        android:onClick="onCheckBoxClicked"
        app:layout_constraintStart_toEndOf="@id/checkbox_tag10"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_tag7"/>

    <CheckBox android:id="@+id/checkbox_tag12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="12dp"
        android:text="@string/tag12"
        android:onClick="onCheckBoxClicked"
        app:layout_constraintStart_toEndOf="@id/checkbox_tag11"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_tag7"/>

    <CheckBox android:id="@+id/checkbox_tag13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="12dp"
        android:text="@string/tag13"
        android:onClick="onCheckBoxClicked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_tag10"/>

    <CheckBox android:id="@+id/checkbox_tag14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="12dp"
        android:text="@string/tag14"
        android:onClick="onCheckBoxClicked"
        app:layout_constraintStart_toEndOf="@id/checkbox_tag13"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_tag10"/>

    <Button
        android:id="@+id/button_staðfesta_auglýsingu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="24dp"
        android:text="Staðfesta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkbox_tag13"
        app:layout_constraintTop_toTopOf="@+id/checkbox_tag13"/>

</androidx.constraintlayout.widget.ConstraintLayout>